# goesbox

./: .gitignore  Cargo.toml  README.md
.cargo/: config
goesbox/: Cargo.toml
goeslib/: Cargo.toml
goeslib/src/: crc.rs  lib.rs  lrit.rs  main.rs  stats.rs  ui.rs
goeslib/src/emwin/: mod.rs  nws.rs  wmo.rs
goeslib/src/handlers/: dcs.rs  debug.rs  image.rs  mod.rs  text.rs
src/: crc.rs  emwin.rs  handlers.rs  lib.rs  lrit.rs  main.rs  stats.rs  ui.rs
src/emwin/: mod.rs  wmo.rs
src/handlers/: dcs.rs  debug.rs  image.rs  mod.rs  text.rs
xtask/src/: main.rs
