[package]
name = "goesbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goeslib = {path = "../goeslib" }
tui = { version = "0.18", features = ["termion"] }
termion = "*"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.4"
log = {version = "0.4", features = ["std"]}
nanomsg = {version = "0.7.2", features = ["bundled"]}


[[bin]]
name = "goesbox-ui"
path = "bin/ui.rs"