[package]
name = "goeslib"
version = "0.1.0"
authors = ["Andrew Chin <achin@eminence32.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {version = "0.4", features = ["std"]}
byteorder = "1"
zip = "0.5.2"
image = "0.22"
acres = {git = "https://github.com/agrif/acres"}
lru-cache = "0.1.2"
crc-any = "2.4.2"
chrono = "0.4.19"


